Fix broken CSS on front page

--- a/assets/stylesheets/views/_home.scss
+++ b/assets/stylesheets/views/_home.scss
@@ -126,7 +126,7 @@
 			margin-bottom: $lineheight;
 		}
 		
-		section > ul > li,
+		& > ul > li,
 		.gce-page-list > ul > li {
 			border-bottom: 1px solid #e2e2e2;
 			padding: .3em 0 0;
